k8s/k8s-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vidchain-documentation-deployment
  labels:
    app: vidchain-documentation
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: vidchain-documentation
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: vidchain-documentation
    spec:
      containers:
        - image: k8scrvidchaindev.azurecr.io/vidchain-documentation:latest
          imagePullPolicy: "Always"
          name: vidchain-documentations
          ports:
            - containerPort: 3000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vidchain-documentation-service
  labels:
    app: vidchain-documentation
spec:
  type: ClusterIP
  ports:
    - name: "3000"
      port: 3000
  selector:
    app: vidchain-documentation

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vidchain-documentation-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ ^/$ {
          return 302 /documentation;
      }
    nginx.ingress.kubernetes.io/rewrite-target: /documentation/$2
spec:
  tls:
    - hosts:
        - dev.vidchain.net
      secretName: tls-secret-development
  rules:
    - host: dev.vidchain.net
      http:
        paths:
          - path: /documentation(/|$)(.*)
            backend:
              serviceName: vidchain-documentation-service
              servicePort: 3000
